# uibenchkit-cli

./: .gitignore  LICENSE  README.md  SUMMARY.md  mkdocs.yaml  pyproject.toml
uibenchkit_cli/: __init__.py  config.py  datasets.py  delete_run.py  gen_api_key.py  get_quotas.py  get_report.py  health.py  list_runs.py  poll.py  rerun_evaluation.py  resume_run.py  retry_failed.py  stop_run.py  submit.py  utils.py  verify_api_key.py
