[project]
name = "uibenchkit-cli"
version = "1.0.0"
description = "CLI for benchmarking image-to-HTML generation using the UIBenchKit API"
authors = [
    { name = "UIBenchKit Team" }
]
dependencies = [
    "typer>=0.9.0",
    "click<8.2.0",
    "requests",
    "rich",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chinh02/uibenchkit-cli"
Issues = "https://github.com/chinh02/uibenchkit-cli/issues"

[project.scripts]
uibenchkit = "uibenchkit_cli:main"
uibenchkit_cli = "uibenchkit_cli:main"
uibenchkit-cli = "uibenchkit_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uibenchkit_cli"]

[tool.ruff]
line-length = 88
src = ["uibenchkit_cli"]

[project.optional-dependencies]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
